unix_list = executable(
  'unix_list',
  'unix_list.c',
  include_directories: INC,
)

time_console = executable(
  'time_console',
  'time_console.c',
  include_directories: INC,
  dependencies: DEPS,
)

sock_init = executable(
  'sock_init',
  'sock_init.c',
  include_directories: INC,
  dependencies: DEPS,
)

time_server = executable(
  'time_server',
  'time_server.c',
  include_directories: INC,
  dependencies: DEPS,
)
